--- a/_posts/2020-07-25-BSOGDM_IR.md
+++ b/_posts/2020-07-25-BSOGDM_IR.md
@@ -3,8 +3,14 @@ layout: post
 title: 'BSOGDM_IR'
 date: 2020-07-25 14:25:12 +0530
 categories: jekyll update
+permalink: /projects/bsogdm-ir/
 ---
+A **document retrieval system** that uses **Bees Swarm Optimization** guided by data mining techniques. Data mining techniques include **clustering** of documents and [extraction of **frequent closed itemsets**][fcp-paper-link](sets of document terms or keywords) from the document clusters using **reduced-PCT(Pattern Count Tree)**. Extracted information from these techniques was used to guide BSO and hence enhance the performance of the retrieval system.
+
+[Link to reference paper][paper-link]
 
 [Source Code][bsogdm-ir-src]
 
+[fcp-paper-link]: https://www.researchgate.net/publication/44261957_Discovery_of_Frequent_Closed_Itemsets_using_Reduced_Pattern_Count_Tree
+[paper-link]: https://doi.org/10.1016/j.eswa.2017.10.042
 [bsogdm-ir-src]: https://github.com/swatisbhat/BSOGDM_IR
