--- a/_posts/2020-07-25-ImgCrypt.md
+++ b/_posts/2020-07-25-ImgCrypt.md
@@ -3,8 +3,13 @@ layout: post
 title: 'ImgCrypt'
 date: 2020-07-25 14:25:12 +0530
 categories: jekyll update
+permalink: /projects/imgcrypt/
 ---
+
+A [symmetric image encryption algorithm][paper-link] based on bit-wise operations. The block ciphering algorithm uses a combination of substitution and transposition techniques that use **dynamic SBOX and TBOX** generated using the secret key for every block of data. **Correlation analysis**, **histogram analysis** and **key sensitivity analysis** was performed to analyse the strength of the algorithm.
+
 
 [Source Code][imgcrypt-src]
 
+[paper-link]: https://www.researchgate.net/publication/276231104
 [imgcrypt-src]: https://github.com/swatisbhat/ImgCrypt
