--- a/_posts/2020-07-25-Tetris.md
+++ b/_posts/2020-07-25-Tetris.md
@@ -3,7 +3,10 @@ layout: post
 title: 'Tetris'
 date: 2020-07-25 14:25:12 +0530
 categories: jekyll update
+permalink: /projects/tetris/
 ---
+
+The classic tetris game implemented using **python** library - **pygame**
 
 [Source Code][tetris-src]
 
