--- a/_posts/2020-07-25-ThePulse.md
+++ b/_posts/2020-07-25-ThePulse.md
@@ -3,7 +3,10 @@ layout: post
 title: 'ThePulse'
 date: 2020-07-25 14:25:12 +0530
 categories: jekyll update
+permalink: /projects/the-pulse/
 ---
+
+A **terminal based news reader tool** built in **Bash**. Features include viewing headlines of the day on the terminal, viewing an entire news article, viewing news headlines and articles specific to a category and archiving headlines for upto a week.
 
 [Source Code][the-pulse-src]
 
