--- a/_posts/2020-07-25-imgrab.md
+++ b/_posts/2020-07-25-imgrab.md
@@ -3,7 +3,10 @@ layout: post
 title: 'imgrab'
 date: 2020-07-25 14:25:12 +0530
 categories: jekyll update
+permalink: /projects/imgrab/
 ---
+
+A light-weight **image download manager** built in **Bash**. Downloads all images from a specified URL. Includes options to specify a download directory and specify image formats to be included/excluded.
 
 [Source Code][imgrab-src]
 
