--- a/_posts/2020-07-25-recSys.md
+++ b/_posts/2020-07-25-recSys.md
@@ -3,9 +3,14 @@ layout: post
 title: 'recSys'
 date: 2020-07-25 14:25:12 +0530
 categories: jekyll update
+permalink: /projects/recsys/
 ---
+
+A web application in **Flask** that recommends books to a user based on a user input book. Functionalities include **search and retrieval of books**, **to-read list**, **favourites list** and a **book recommender system**. A comparison was made of quality of recommendations based on simple item(and user) based  collaborative filtering methods and one that used item(and user) based collaborative filtering [leveraging author rankings obtained from item-item similarities][paper-link]. 
 
 [Source Code][recSys-src]
 
+[paper-link]: https://www.researchgate.net/publication/221935859_Improving_an_Hybrid_Literary_Book_Recommendation_System_through_AuthorRanking
 [recSys-src]: https://github.com/swatisbhat/recSys
+
 
