--- a/_posts/2020-07-25-qubera.md
+++ b/_posts/2020-07-25-qubera.md
@@ -3,8 +3,12 @@ layout: post
 title: 'qubera'
 date: 2020-07-25 14:25:12 +0530
 categories: jekyll update
+permalink: /projects/qubera/
 ---
+
+A simple **JavaScript** budget app built as part of the Udemy course - [The Complete JavaScript Course 2020][course-link].This app is implemented using the **module pattern (using IIFEs and leveraging the power of closures in ES5**).
 
 [Source Code][qubera-src]
 
+[course-link]: https://www.udemy.com/course/the-complete-javascript-course/
 [qubera-src]: https://github.com/swatisbhat/qubera
