--- a/_posts/2020-07-25-BSOGDM_IR.md
+++ b/_posts/2020-07-25-BSOGDM_IR.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 'BSOGDM_IR'
+title: 'BSOGDM-IR'
 date: 2020-07-25 14:25:12 +0530
 categories: jekyll update
 permalink: /projects/bsogdm-ir/
