added excerpts and tags

--- a/_posts/2020-07-25-BSOGDM_IR.md
+++ b/_posts/2020-07-25-BSOGDM_IR.md
@@ -4,7 +4,10 @@ title: 'BSOGDM-IR'
 date: 2020-07-25 14:25:12 +0530
 categories: jekyll update
 permalink: /projects/bsogdm-ir/
+excerpt: A document retrieval system that uses Bees Swarm Optimization guided by data mining techniques.
+tags: ['python', 'data mining', 'information retrieval', 'algorithm']
 ---
+
 A **document retrieval system** that uses **Bees Swarm Optimization** guided by data mining techniques. Data mining techniques include **clustering** of documents and [extraction of **frequent closed itemsets**][fcp-paper-link](sets of document terms or keywords) from the document clusters using **reduced-PCT(Pattern Count Tree)**. Extracted information from these techniques was used to guide BSO and hence enhance the performance of the retrieval system.
 
 [Link to reference paper][paper-link]
