--- a/_posts/2020-07-25-LMS.md
+++ b/_posts/2020-07-25-LMS.md
@@ -4,6 +4,8 @@ title: 'Django-LMS'
 date: 2020-07-25 14:25:12 +0530
 categories: jekyll update
 permalink: /projects/django-lms/
+excerpt: A simple Library Management System built using Django.
+tags: ['django', 'web app']
 ---
 
 A simple **Library Management System** built using **Django**.
@@ -11,4 +13,3 @@ A simple **Library Management System** built using **Django**.
 [Source Code][lms-src]
 
 [lms-src]: https://github.com/swatisbhat/LMS
-
