--- a/_posts/2020-07-25-Tetris.md
+++ b/_posts/2020-07-25-Tetris.md
@@ -4,6 +4,8 @@ title: 'Tetris'
 date: 2020-07-25 14:25:12 +0530
 categories: jekyll update
 permalink: /projects/tetris/
+excerpt: The classic tetris game implemented in Python.
+tags: ['python']
 ---
 
 The classic tetris game implemented using **python** library - **pygame**
@@ -11,4 +13,3 @@ The classic tetris game implemented using **python** library - **pygame**
 [Source Code][tetris-src]
 
 [tetris-src]: https://github.com/swatisbhat/Tetris
-
