--- a/_posts/2020-07-25-ThePulse.md
+++ b/_posts/2020-07-25-ThePulse.md
@@ -4,6 +4,8 @@ title: 'ThePulse'
 date: 2020-07-25 14:25:12 +0530
 categories: jekyll update
 permalink: /projects/the-pulse/
+excerpt: A terminal based news reader tool built in Bash.
+tags: ['bash', 'command line tool']
 ---
 
 A **terminal based news reader tool** built in **Bash**. Features include viewing headlines of the day on the terminal, viewing an entire news article, viewing news headlines and articles specific to a category and archiving headlines for upto a week.
@@ -11,4 +13,3 @@ A **terminal based news reader tool** built in **Bash**. Features include viewin
 [Source Code][the-pulse-src]
 
 [the-pulse-src]: https://github.com/swatisbhat/ThePulse
-
