--- a/_posts/2020-07-25-qubera.md
+++ b/_posts/2020-07-25-qubera.md
@@ -4,6 +4,8 @@ title: 'qubera'
 date: 2020-07-25 14:25:12 +0530
 categories: jekyll update
 permalink: /projects/qubera/
+excerpt: A simple JavaScript budget app.
+tags: ['JavaScript', 'web app']
 ---
 
 A simple **JavaScript** budget app built as part of the Udemy course - [The Complete JavaScript Course 2020][course-link].This app is implemented using the **module pattern (using IIFEs and leveraging the power of closures in ES5**).
