--- a/_posts/2020-07-25-ImgCrypt.md
+++ b/_posts/2020-07-25-ImgCrypt.md
@@ -4,10 +4,11 @@ title: 'ImgCrypt'
 date: 2020-07-25 14:25:12 +0530
 categories: jekyll update
 permalink: /projects/imgcrypt/
+excerpt: A symmetric image encryption algorithm based on bit-wise operations implemented in Python.
+tags: ['python', 'algorithm', 'cryptography']
 ---
 
 A [symmetric image encryption algorithm][paper-link] based on bit-wise operations. The block ciphering algorithm uses a combination of substitution and transposition techniques that use **dynamic SBOX and TBOX** generated using the secret key for every block of data. **Correlation analysis**, **histogram analysis** and **key sensitivity analysis** was performed to analyse the strength of the algorithm.
-
 
 [Source Code][imgcrypt-src]
 
