--- a/_posts/2020-07-25-recSys.md
+++ b/_posts/2020-07-25-recSys.md
@@ -4,13 +4,13 @@ title: 'recSys'
 date: 2020-07-25 14:25:12 +0530
 categories: jekyll update
 permalink: /projects/recsys/
+excerpt: A book recommender web application built in Flask.
+tags: ['Flask', 'python', 'web app']
 ---
 
-A web application in **Flask** that recommends books to a user based on a user input book. Functionalities include **search and retrieval of books**, **to-read list**, **favourites list** and a **book recommender system**. A comparison was made of quality of recommendations based on simple item(and user) based  collaborative filtering methods and one that used item(and user) based collaborative filtering [leveraging author rankings obtained from item-item similarities][paper-link]. 
+A web application in **Flask** that recommends books to a user based on a user input book. Functionalities include **search and retrieval of books**, **to-read list**, **favourites list** and a **book recommender system**. A comparison was made of quality of recommendations based on simple item(and user) based collaborative filtering methods and one that used item(and user) based collaborative filtering [leveraging author rankings obtained from item-item similarities][paper-link].
 
-[Source Code][recSys-src]
+[Source Code][recsys-src]
 
 [paper-link]: https://www.researchgate.net/publication/221935859_Improving_an_Hybrid_Literary_Book_Recommendation_System_through_AuthorRanking
-[recSys-src]: https://github.com/swatisbhat/recSys
-
-
+[recsys-src]: https://github.com/swatisbhat/recSys
